--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,8 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainLL"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
@@ -22,10 +24,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
-    <WebView
+
+    <org.apache.cordova.CordovaWebView
         android:id="@+id/main_webview"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-    </WebView>
+        android:layout_height="fill_parent"/>
 
 </LinearLayout>
